feat: gen types & helpers, spin out login form and protected transactions dashboard with data loaders and react query

--- a/packages/client/.prettierrc
+++ b/packages/client/.prettierrc
@@ -1,18 +1,13 @@
 {
-  "printWidth": 70,
-  "semi": false,
+  "semi": true,
   "singleQuote": true,
-  "trailingComma" : "none",
+  "trailingComma": "all",
   "arrowParens": "avoid",
   "plugins": [
     "@trivago/prettier-plugin-sort-imports",
     "prettier-plugin-tailwindcss"
   ],
-  "importOrder": [
-    "<THIRD_PARTY_MODULES>",
-    "^~",
-    "^[./]"
-  ],
+  "importOrder": ["<THIRD_PARTY_MODULES>", "^~", "^[./]"],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true
 }
