--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -6,11 +6,22 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prettier": "prettier . --write",
+    "generate-client": "openapi-ts"
   },
   "dependencies": {
+    "@hey-api/openapi-ts": "^0.52.9",
+    "@hookform/resolvers": "^3.9.0",
+    "@tanstack/react-query": "^5.52.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.26.1",
+    "typescript": "^5.5.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
@@ -22,7 +33,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.10",
-    "typescript": "^4.6.4",
-    "vite": "^3.1.0"
+    "vite": "^3.1.0",
+    "vite-tsconfig-paths": "^5.0.1"
   }
 }
