--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "prettier": "prettier . --write",
-    "generate-client": "openapi-ts"
+    "generate-client": "openapi-ts",
+    "test": "jest"
   },
   "dependencies": {
     "@hey-api/openapi-ts": "^0.52.9",
@@ -25,11 +26,19 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@swc/jest": "^0.2.36",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/jest": "^29.2.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
     "autoprefixer": "^10.4.20",
+    "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^25.0.0",
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
